--- a/package.json
+++ b/package.json
@@ -29,17 +29,24 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.2.2",
     "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
     "@angular/forms": "^9.1.0",
+    "@angular/material": "^9.2.1",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@ngxs/devtools-plugin": "^3.6.2",
+    "@ngxs/logger-plugin": "^3.6.2",
+    "@ngxs/store": "^3.6.2",
+    "@nrwl/angular": "9.2.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
+    "subsink": "^1.0.1",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
